[package]
name = "tvlimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
humantime = "2.1.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde-xml-rs = "0.6.0"
toml = "0.8.12"
tplink-shome-protocol = "0.1.2"
ureq = "2.9.6"

